@@ -37,3 +37,4 @@ git-annex: You cannot run this command in a bare repository.
 ### Have you had any luck using git-annex before? (Sometimes we get tired of reading bug reports all day and a lil' positive end note does wonders)
 
 
+> [[fixed|done]] --[[Joey]]
